Setup NFC Environment to handle UID extraction of a NFC tag. Add Comments.

--- a/app/src/main/res/xml/nfc_tech_filter.xml
+++ b/app/src/main/res/xml/nfc_tech_filter.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <tech-list>
-        <tech>android.nfc.tech.Ndef</tech>
+        <!-- For communicating with the card via NFC-A protocol -->
+        <tech>android.nfc.tech.NfcA</tech>
     </tech-list>
-
 </resources>
