--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,47 @@
         android:layout_height="match_parent"
         tools:context=".NFCActivity">
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="UID:"
+            android:layout_width="62dp"
+            android:layout_height="40dp" android:id="@+id/uidView"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            app:layout_constraintHorizontal_bias="0.256" android:layout_marginTop="224dp"/>
+    <TextView
+            android:text="NFCApp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/textView2"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="9dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="173dp" app:layout_constraintEnd_toStartOf="@+id/textView3"
+            android:layout_marginEnd="79dp" android:layout_marginBottom="58dp"
+            app:layout_constraintBottom_toTopOf="@+id/uidView"/>
+    <TextView
+            android:text="admin login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/textView3"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp" android:layout_marginStart="79dp"
+            app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginBottom="308dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView4" android:layout_marginEnd="34dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="1.0"/>
+    <TextView
+            android:text="Please bring your Phone near the NFC tag."
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/textView4"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="377dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="73dp" android:layout_marginTop="71dp"
+            app:layout_constraintTop_toBottomOf="@+id/uidView" android:layout_marginEnd="74dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+            android:text=""
+            android:layout_width="88dp"
+            android:layout_height="40dp" android:id="@+id/tvNfcData"
+            android:layout_marginTop="127dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="36dp"
+            app:layout_constraintStart_toEndOf="@+id/uidView" android:layout_marginEnd="135dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="71dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView4"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
