--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         tools:context=".NFCActivity">
     <TextView
-            android:text="UID:"
+            android:text="@string/uid"
             android:layout_width="62dp"
             android:layout_height="40dp" android:id="@+id/uidView"
             app:layout_constraintStart_toStartOf="parent"
@@ -15,7 +15,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.256" android:layout_marginTop="224dp"/>
     <TextView
-            android:text="NFCApp"
+            android:text="@string/nfcapp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView2"
             app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +24,7 @@
             android:layout_marginEnd="79dp" android:layout_marginBottom="58dp"
             app:layout_constraintBottom_toTopOf="@+id/uidView"/>
     <TextView
-            android:text="admin login"
+            android:text="@string/admin_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView3"
             app:layout_constraintTop_toTopOf="parent"
@@ -33,7 +33,7 @@
             app:layout_constraintBottom_toTopOf="@+id/textView4" android:layout_marginEnd="34dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="1.0"/>
     <TextView
-            android:text="Please bring your Phone near the NFC tag."
+            android:text="@string/please_bring_your_phone_near_the_nfc_tag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView4"
             app:layout_constraintBottom_toBottomOf="parent"
