--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".NFCActivity">
+        tools:context=".NFCActivity" android:background="#FFFFFF" tools:ignore="ExtraText">
     <TextView
             android:text="@string/uid"
             android:layout_width="62dp"
@@ -13,7 +13,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.256" android:layout_marginTop="224dp"/>
+            app:layout_constraintHorizontal_bias="0.256"
+            android:layout_marginTop="224dp"
+            android:fontFamily="@font/tiltneon"
+            app:fontFamily="@font/tiltneon"/>
+
     <TextView
             android:text="@string/nfcapp"
             android:layout_width="wrap_content"
@@ -22,16 +26,19 @@
             android:layout_marginTop="9dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="173dp" app:layout_constraintEnd_toStartOf="@+id/textView3"
             android:layout_marginEnd="79dp" android:layout_marginBottom="58dp"
-            app:layout_constraintBottom_toTopOf="@+id/uidView"/>
+            app:layout_constraintBottom_toTopOf="@+id/uidView" android:textStyle="bold"
+            android:fontFamily="@font/tiltneon"/>
     <TextView
             android:text="@string/admin_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView3"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" android:layout_marginStart="79dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginBottom="308dp"
             app:layout_constraintBottom_toTopOf="@+id/textView4" android:layout_marginEnd="34dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="1.0"/>
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.0"
+            android:fontFamily="@font/tiltneon"
+            android:onClick="onAdminLoginClick"/>
     <TextView
             android:text="@string/please_bring_your_phone_near_the_nfc_tag"
             android:layout_width="wrap_content"
@@ -40,14 +47,16 @@
             android:layout_marginBottom="377dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="73dp" android:layout_marginTop="71dp"
             app:layout_constraintTop_toBottomOf="@+id/uidView" android:layout_marginEnd="74dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/tiltneon"/>
     <TextView
             android:text=""
-            android:layout_width="88dp"
-            android:layout_height="40dp" android:id="@+id/tvNfcData"
+            android:layout_width="148dp"
+            android:layout_height="42dp" android:id="@+id/tvNfcData"
             android:layout_marginTop="127dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="36dp"
-            app:layout_constraintStart_toEndOf="@+id/uidView" android:layout_marginEnd="135dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintStart_toEndOf="@+id/uidView"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="71dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView4"/>
+            app:layout_constraintBottom_toTopOf="@+id/textView4" app:layout_constraintHorizontal_bias="0.27"
+            app:layout_constraintVertical_bias="0.666" android:fontFamily="@font/tiltneon"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
