--- a/app/src/main/res/layout/activity_adminlogin.xml
+++ b/app/src/main/res/layout/activity_adminlogin.xml
@@ -12,7 +12,8 @@
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="79dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintVertical_bias="0.025" android:textStyle="bold" android:layout_marginBottom="32dp"/>
+            app:layout_constraintVertical_bias="0.025" android:textStyle="bold" android:layout_marginBottom="32dp"
+            android:fontFamily="@font/tiltneon"/>
     <Button
             android:text="@string/back_btn"
             android:layout_width="wrap_content"
@@ -23,33 +24,45 @@
             android:layout_marginBottom="658dp"
             android:onClick="onAdminBack" app:layout_constraintVertical_bias="0.036"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="27dp"
-            android:backgroundTint="#8BC34A"/>
+            android:backgroundTint="#8BC34A"
+            android:fontFamily="@font/tiltneon"/>
 
     <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="400dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="33dp" app:layout_constraintBottom_toTopOf="@+id/password"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/username">
+        android:id="@+id/username"
+        android:layout_width="362dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="33dp"
+        app:layout_constraintBottom_toTopOf="@+id/password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:fontFamily="@font/tiltneon">
 
         <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/user_hint"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/user_hint"
+            android:fontFamily="@font/tiltneon"/>
     </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="400dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/password" android:layout_marginTop="33dp"
-            app:layout_constraintTop_toBottomOf="@+id/username" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp">
+        android:id="@+id/password"
+        android:layout_width="362dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="33dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/username"
+        android:fontFamily="@font/tiltneon">
 
         <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/pass_hint"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/pass_hint"
+            android:fontFamily="@font/tiltneon"/>
     </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
