--- a/app/src/main/res/layout/activity_adminlogin.xml
+++ b/app/src/main/res/layout/activity_adminlogin.xml
@@ -65,4 +65,20 @@
             android:fontFamily="@font/tiltneon"/>
     </com.google.android.material.textfield.TextInputLayout>
 
+    <Button
+        android:id="@+id/loginbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="163dp"
+        android:onClick="onAdminLogin"
+        android:text="@string/loginbtn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:layout_constraintVertical_bias="0.005" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
