--- a/app/src/main/res/layout/activity_adminpage.xml
+++ b/app/src/main/res/layout/activity_adminpage.xml
@@ -1,35 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/addobjectbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="146dp"
+        android:layout_marginEnd="146dp"
+        android:layout_marginBottom="91dp"
+        android:fontFamily="@font/tiltneon"
         android:text="@string/add"
-        tools:layout_editor_absoluteX="146dp"
-        tools:layout_editor_absoluteY="479dp"
-        android:fontFamily="@font/tiltneon"/>
+        app:layout_constraintBottom_toTopOf="@+id/backtoscanbtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="onAdminAddObject"/>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/mapbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="138dp"
+        android:layout_marginEnd="136dp"
+        android:layout_marginBottom="109dp"
+        android:fontFamily="@font/tiltneon"
         android:text="@string/map"
-        tools:layout_editor_absoluteX="138dp"
-        tools:layout_editor_absoluteY="322dp"
-        android:fontFamily="@font/tiltneon"/>
+        app:layout_constraintBottom_toTopOf="@+id/addobjectbtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="onAdminMap"/>
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/adminoptions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="159dp"
+        android:layout_marginTop="174dp"
+        android:layout_marginEnd="159dp"
+        android:layout_marginBottom="125dp"
+        android:fontFamily="@font/tiltneon"
         android:text="@string/options"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="159dp"
-        tools:layout_editor_absoluteY="175dp"
-        android:fontFamily="@font/tiltneon"/>
+        app:layout_constraintBottom_toTopOf="@+id/mapbtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/backtoscanbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="162dp"
+        android:layout_marginEnd="162dp"
+        android:layout_marginBottom="340dp"
+        android:text="@string/backtoscanbtn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="onAdminScan"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
