--- a/app/src/main/res/layout/activity_adminpage.xml
+++ b/app/src/main/res/layout/activity_adminpage.xml
@@ -6,61 +6,57 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/addobjectbtn"
+        android:id="@+id/addobj_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="146dp"
-        android:layout_marginEnd="146dp"
-        android:layout_marginBottom="91dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="353dp"
         android:fontFamily="@font/tiltneon"
+        android:onClick="onAdminAddObject"
         android:text="@string/add"
-        app:layout_constraintBottom_toTopOf="@+id/backtoscanbtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:onClick="onAdminAddObject"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/deleteobjectbtn"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/mapbtn"
+        android:id="@+id/deleteobjectbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="138dp"
-        android:layout_marginEnd="136dp"
-        android:layout_marginBottom="109dp"
+        android:layout_marginEnd="115dp"
+        android:layout_marginBottom="353dp"
         android:fontFamily="@font/tiltneon"
-        android:text="@string/map"
-        app:layout_constraintBottom_toTopOf="@+id/addobjectbtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:onClick="onAdminMap"/>
+        android:onClick="onAdminAddObject"
+        android:text="@string/deletebtn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/adminoptions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="159dp"
-        android:layout_marginTop="174dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="159dp"
-        android:layout_marginBottom="125dp"
+        android:layout_marginBottom="38dp"
         android:fontFamily="@font/tiltneon"
         android:text="@string/options"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/mapbtn"
+        app:layout_constraintBottom_toTopOf="@+id/objectView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/backtoscanbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="162dp"
-        android:layout_marginEnd="162dp"
-        android:layout_marginBottom="340dp"
-        android:text="@string/backtoscanbtn"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/objectView"
+        android:layout_width="409dp"
+        android:layout_height="407dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="38dp"
+        app:layout_constraintBottom_toTopOf="@+id/deleteobjectbtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:onClick="onAdminScan"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
