--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,62 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".NFCActivity" android:background="#FFFFFF" tools:ignore="ExtraText">
-    <TextView
-            android:text="@string/uid"
-            android:layout_width="62dp"
-            android:layout_height="40dp" android:id="@+id/uidView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.256"
-            android:layout_marginTop="224dp"
-            android:fontFamily="@font/tiltneon"
-            app:fontFamily="@font/tiltneon"/>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".NFCActivity"
+    tools:ignore="ExtraText">
 
     <TextView
-            android:text="@string/nfcapp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView2"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="9dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="173dp" app:layout_constraintEnd_toStartOf="@+id/textView3"
-            android:layout_marginEnd="79dp" android:layout_marginBottom="58dp"
-            app:layout_constraintBottom_toTopOf="@+id/uidView" android:textStyle="bold"
-            android:fontFamily="@font/tiltneon"/>
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="800dp"
+        android:fontFamily="@font/tiltneon"
+        android:text="@string/nfcapp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-            android:text="@string/admin_login"
-            android:layout_width="94dp"
-            android:layout_height="29dp" android:id="@+id/textView3"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginBottom="308dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView4" android:layout_marginEnd="34dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.0"
-            android:fontFamily="@font/tiltneon"
-            android:onClick="onAdminLoginClick"/>
+        android:id="@+id/admin_login_label"
+        android:layout_width="94dp"
+        android:layout_height="29dp"
+        android:layout_marginEnd="250dp"
+        android:layout_marginBottom="800dp"
+        android:fontFamily="@font/tiltneon"
+        android:onClick="onAdminLoginClick"
+        android:text="@string/admin_login"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-            android:text="@string/nfc_prompt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView4"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="377dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="73dp" android:layout_marginTop="71dp"
-            app:layout_constraintTop_toBottomOf="@+id/uidView" android:layout_marginEnd="74dp"
-            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/tiltneon"/>
+        android:id="@+id/nfc_prompt_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="450dp"
+        android:layout_marginBottom="100dp"
+        android:fontFamily="@font/tiltneon"
+        android:text="@string/nfc_prompt"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-            android:text=""
-            android:layout_width="148dp"
-            android:layout_height="42dp" android:id="@+id/tvNfcData"
-            android:layout_marginTop="127dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:layout_constraintStart_toEndOf="@+id/uidView"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="71dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView4" app:layout_constraintHorizontal_bias="0.189"
-            app:layout_constraintVertical_bias="0.0" android:fontFamily="@font/tiltneon"/>
+        android:id="@+id/name_label"
+        android:layout_width="80dp"
+        android:layout_height="46dp"
+        android:layout_marginEnd="150dp"
+        android:layout_marginBottom="600dp"
+        android:text="@string/name_inp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/location_label"
+        android:layout_width="80dp"
+        android:layout_height="46dp"
+        android:layout_marginEnd="150dp"
+        android:layout_marginBottom="400dp"
+        android:text="@string/location_inp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/desc_label"
+        android:layout_width="111dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="200dp"
+        android:text="@string/desc_inp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/name_output"
+        android:layout_width="80dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginBottom="600dp"
+        android:text=""
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/location_output"
+        android:layout_width="80dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginBottom="400dp"
+        android:text=""
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/desc_output"
+        android:layout_width="270dp"
+        android:layout_height="135dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="150dp"
+        android:text=""
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
