--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_background"
     tools:context=".NFCActivity"
     tools:ignore="ExtraText">
+
 
     <TextView
         android:id="@+id/title"
@@ -14,6 +16,7 @@
         android:layout_marginBottom="800dp"
         android:fontFamily="@font/tiltneon"
         android:text="@string/nfcapp"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,9 +29,12 @@
         android:layout_height="29dp"
         android:layout_marginEnd="250dp"
         android:layout_marginBottom="800dp"
+        android:background="@drawable/rectangle"
         android:fontFamily="@font/tiltneon"
+        android:gravity="center"
         android:onClick="onAdminLoginClick"
         android:text="@string/admin_login"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,6 +48,7 @@
         android:layout_marginBottom="100dp"
         android:fontFamily="@font/tiltneon"
         android:text="@string/nfc_prompt"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,12 +56,13 @@
 
     <TextView
         android:id="@+id/name_label"
-        android:layout_width="80dp"
-        android:layout_height="46dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
         android:layout_marginEnd="150dp"
         android:layout_marginBottom="600dp"
         android:text="@string/name_inp"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,12 +71,13 @@
 
     <TextView
         android:id="@+id/location_label"
-        android:layout_width="80dp"
-        android:layout_height="46dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
         android:layout_marginEnd="150dp"
         android:layout_marginBottom="400dp"
         android:text="@string/location_inp"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,11 +86,12 @@
 
     <TextView
         android:id="@+id/desc_label"
-        android:layout_width="111dp"
-        android:layout_height="48dp"
+        android:layout_width="105dp"
+        android:layout_height="30dp"
         android:layout_marginBottom="200dp"
         android:text="@string/desc_inp"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,44 +100,62 @@
 
     <TextView
         android:id="@+id/name_output"
-        android:layout_width="80dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="150dp"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="200dp"
         android:layout_marginBottom="600dp"
+        android:background="@drawable/rectangle"
         android:text=""
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.583"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.497" />
 
     <TextView
         android:id="@+id/location_output"
-        android:layout_width="80dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="150dp"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="205dp"
         android:layout_marginBottom="400dp"
+        android:background="@drawable/rectangle"
         android:text=""
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.591"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/desc_output"
-        android:layout_width="270dp"
-        android:layout_height="135dp"
-        android:layout_marginTop="200dp"
+        android:layout_width="350dp"
+        android:layout_height="137dp"
+        android:layout_marginTop="170dp"
         android:layout_marginBottom="150dp"
+        android:background="@drawable/rectangle"
         android:text=""
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.426"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.506" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
