--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -35,16 +35,18 @@
 
     <TextView
         android:id="@+id/map_object_field"
-        android:layout_width="121dp"
-        android:layout_height="68dp"
+        android:layout_width="130dp"
+        android:layout_height="77dp"
         android:layout_marginBottom="500dp"
         android:fontFamily="@font/tiltneon"
+        android:textAlignment="center"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.536"
-        android:textColor="@color/white"/>
+        app:layout_constraintVertical_bias="0.54" />
 
     <Button
         android:id="@+id/back"
