Update formatting, add addNfc.

--- a/app/src/main/res/layout/item_object.xml
+++ b/app/src/main/res/layout/item_object.xml
@@ -13,7 +13,7 @@
         android:layout_marginEnd="8dp"
         android:text="Object Name"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/tvObjectLocation"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +25,7 @@
         android:layout_marginEnd="8dp"
         android:text="Location"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/tvUID"
         app:layout_constraintStart_toEndOf="@+id/tvObjectName"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:text="UID"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvObjectLocation"
         app:layout_constraintTop_toTopOf="parent" />
